# playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/models/: deer.glb  warrior.glb  warrior.m3d
assets/shaders/: lighting.fs
include/: Character.h  Game.h  ResourceManager.h  TextManager.h
src/: Character.cpp  Game.cpp  ResourceManager.cpp  TextManager.cpp  main.cpp
